<resources>
    <string name="app_name">TFGpruebita</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_league">League</string>
    <string name="title_team">Team</string>
    <string name="title_Transfers">Transfers</string>
    <string name="title_Friends">AdminPage</string>
</resources>